--- a/gui/azure_config_advanced.ui
+++ b/gui/azure_config_advanced.ui
@@ -18,7 +18,7 @@
     <widget class="QGroupBox" name="groupBox_libfuse">
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>450</width>
        <height>125</height>
       </size>
      </property>
@@ -49,6 +49,18 @@
          </item>
          <item>
           <widget class="QSpinBox" name="spinBox_libfuse_maxFuseThreads">
+           <property name="minimumSize">
+            <size>
+             <width>120</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="focusPolicy">
             <enum>Qt::NoFocus</enum>
            </property>
