About pages for Qt and Cloudfuse now work

--- a/gui/mountPrimaryWindow.ui
+++ b/gui/mountPrimaryWindow.ui
@@ -222,7 +222,7 @@
   </action>
   <action name="actionAbout_CloudFuse">
    <property name="text">
-    <string>About LyveFuse</string>
+    <string>About Cloudfuse</string>
    </property>
   </action>
  </widget>
