GUI about page (#2)
* Initial menu Help + About action

* Dialog Box for about page

* rename file

* About Pages WIP - AboutQT, next for CloudFUSE

* About pages for Qt and Cloudfuse now work

* fix spelling mistake

* Fix font styles

--- a/gui/mountPrimaryWindow.ui
+++ b/gui/mountPrimaryWindow.ui
@@ -174,7 +174,15 @@
     <addaction name="action_debugHealthMonitor"/>
     <addaction name="action_debugTesting"/>
    </widget>
+   <widget class="QMenu" name="menu_Help">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout_Qt"/>
+    <addaction name="actionAbout_CloudFuse"/>
+   </widget>
    <addaction name="menu_Debug"/>
+   <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionReset_Default_Settings">
@@ -205,6 +213,16 @@
   <action name="setup_action">
    <property name="text">
     <string>Setup</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About QT</string>
+   </property>
+  </action>
+  <action name="actionAbout_CloudFuse">
+   <property name="text">
+    <string>About Cloudfuse</string>
    </property>
   </action>
  </widget>
